--- a/electron.html
+++ b/electron.html
@@ -4,6 +4,9 @@
 <head>
     <title>JSMusicDB next</title>
     <meta charset="UTF-8">
+
+    <link rel="manifest" href="manifest.json">
+
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="css/styles-4473e188e1.css">
     <base href=".">
@@ -22,10 +25,10 @@
 
     <script src="js/polyfills-9e3fd751f6.js"></script>
 
-    <script src="js/dependencies-18c83c7c0b.bundle.js"></script>
-    <script src="js/app-6d8da983d0.bundle.js"></script>
+    <script src="js/dependencies-a50301560b.bundle.js"></script>
+    <script src="js/app-4571bd3081.bundle.js"></script>
 
-    <script src="js/dist-systemjs-0b49d89f0d.config.js"></script>
+    <script src="js/dist-systemjs-36719a839b.config.js"></script>
     <script>
         var ENV = 'prod';
         System.import('app/main').catch(function(err) {
