[TASK] Visual tweaks

--- a/electron.html
+++ b/electron.html
@@ -8,24 +8,27 @@
     <link rel="manifest" href="manifest.json">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="css/styles-188893a4c7.css">
+    <link rel="stylesheet" href="css/styles-cb27c836ac.css">
     <base href=".">
 </head>
 
 <body>
     <musicdb id="musicdb">
-        <div class="progress-bar">
-            <div class="progress-circle"></div>
-            <div class="progress-circle"></div>
-            <div class="progress-circle"></div>
-            <div class="progress-circle"></div>
-            <div class="progress-circle"></div>
+        <div class="preloader">
+            <div>Loading ...</div> 
+            <div class="progress-bar">
+                <div class="progress-circle"></div>
+                <div class="progress-circle"></div>
+                <div class="progress-circle"></div>
+                <div class="progress-circle"></div>
+                <div class="progress-circle"></div>
+            </div>
         </div>
     </musicdb>
 
     <script src="js/polyfills-1d49e69c77.js"></script>
 
-    <script src="js/app-2839f93217.bundle.js"></script>
+    <script src="js/app-843ae6f476.bundle.js"></script>
 
     <script src="js/dist-systemjs-9f11cfc264.config.js"></script>
     <script>
