[TASK] Bump version; tooltip fixes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <musicdb id="musicdb">
         <div class="preloader">
-            <div>Loading ...</div> 
+            <div><img src="global/images/logo.png" width="300" alt="Logo"></div> 
             <div class="progress-bar">
                 <div class="progress-circle"></div>
                 <div class="progress-circle"></div>
@@ -40,7 +40,7 @@
 
     <script src="/js/polyfills-2a526c4c98.js"></script>
 
-    <script src="/js/app-3072d2e7b7.bundle.js"></script>
+    <script src="/js/app-2dfe0f4352.bundle.js"></script>
 
     <script src="/js/dist-systemjs-67862bd980.config.js"></script>
     <script>
