[TASK] Custom playlist support

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" type="image/png" sizes="1024x1024" href="/global/images/logo.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="/css/styles-254cc52cd7.css">
+    <link rel="stylesheet" href="/css/styles-54afa7a7bc.css">
     <base href="/">
 </head>
 
@@ -39,11 +39,11 @@
         </div>
     </musicdb>
 
-    <script src="/js/polyfills-42c5cf815b.js"></script>
+    <script src="/js/polyfills-2c210e8522.js" async></script>
 
-    <script src="/js/app-c52fe23105.bundle.js"></script>
+    <script src="/js/app-92921a2427.bundle.js"></script>
 
-    <script src="/js/dist-systemjs-67862bd980.config.js"></script>
+    <script src="/js/dist-systemjs-e431aba346.config.js"></script>
     <script>
         var ENV = 'prod';
         System.import('app/main').catch(function(err) {
