[TASK] Version 2017-02-11 Better multi format support

--- a/electron.html
+++ b/electron.html
@@ -26,9 +26,9 @@
         </div>
     </musicdb>
 
-    <script src="js/polyfills-576d9cc0c4.js" async></script>
+    <script src="js/polyfills-576d9cc0c4.js"></script>
 
-    <script src="js/app-fdaefbf44d.bundle.js"></script>
+    <script src="js/app-19a2f03421.bundle.js"></script>
 
     <script src="js/dist-systemjs-e431aba346.config.js"></script>
     <script>
