--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>JSMusicDB Next</title><base href="."><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="theme-color" content="#0078D7"><link rel="manifest" href="manifest.json"><link rel="icon" type="image/png" sizes="1024x1024" href="/global/images/logo.png"><link href="styles.340697c35e7548259fc4.bundle.css" rel="stylesheet"/></head><body><mdb-root><div class="preloader"><div><img src="global/images/logo.png" width="250" alt="Logo"></div><div class="progress-bar"><div class="progress-circle"></div><div class="progress-circle"></div><div class="progress-circle"></div><div class="progress-circle"></div><div class="progress-circle"></div></div></div></mdb-root><noscript>Unfortunately JavaScript is needed for this JavaScript based client webaudio based music database.</noscript><script type="text/javascript" src="inline.318b50c57b4eba3d437b.bundle.js"></script><script type="text/javascript" src="polyfills.cecfd6dd5f839bf9de74.bundle.js"></script><script type="text/javascript" src="main.be8b8dca44dc9792f8d7.bundle.js"></script></body></html>
+<!DOCTYPE html><html lang="en"><head>
+  <meta charset="utf-8">
+  <title>JSMusicDB Next</title>
+  <base href=".">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#0078D7">
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" type="image/png" sizes="1024x1024" href="/global/images/logo.png">
+<link rel="stylesheet" href="styles.c21ba73e9cc258be9f03.css"></head>
+
+<body>
+  <mdb-root>
+    <div class="preloader">
+      <div>
+        <img src="global/images/logo.png" width="250" alt="Logo">
+      </div>
+      <div class="progress-bar">
+        <div class="progress-circle"></div>
+        <div class="progress-circle"></div>
+        <div class="progress-circle"></div>
+        <div class="progress-circle"></div>
+        <div class="progress-circle"></div>
+      </div>
+    </div>
+  </mdb-root>
+  <noscript>
+    Unfortunately JavaScript is needed for this JavaScript based client webaudio based music database.
+  </noscript>
+
+
+<script type="text/javascript" src="runtime.6afe30102d8fe7337431.js"></script><script type="text/javascript" src="polyfills.309dcc7fe394417140a0.js"></script><script type="text/javascript" src="main.b1294b3261d173ddd1b5.js"></script></body></html>
