--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html><html lang="en"><head>
+<!doctype html>
+<html lang="en">
+
+<head>
   <meta charset="utf-8">
   <title>JSMusicDB Next</title>
   <base href=".">
@@ -7,7 +10,9 @@
   <meta name="Description" content="Web standards based music player">
   <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/png" sizes="1024x1024" href="/global/images/logo.png">
-<link rel="stylesheet" href="styles.f3c0b7799fa9a6cffcfa.css"></head>
+  <link rel="prefetch" href="/global/css/light.css" as="style">
+  <link rel="prefetch" href="/global/css/dark.css" as="style">
+<link rel="stylesheet" href="styles.8b84d1a20fa36fdf0038.css"></head>
 
 <body>
   <mdb-root>
@@ -15,8 +20,8 @@
       <div>
         <img src="global/images/logo.png" width="250" alt="Logo">
       </div>
-      <br>
-      <br>
+      <br />
+      <br />
       <div class="progress-bar">
         <div class="progress-circle"></div>
         <div class="progress-circle"></div>
@@ -43,6 +48,6 @@
       document.querySelector("img").src = "global/images/icon-512-white.png";
     }
   </script>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.f4fa63e2664e9d4ad28d.js"></script><script type="text/javascript" src="main.980311c0e486a0a174dd.js"></script></body>
 
-
-<script type="text/javascript" src="runtime.6afe30102d8fe7337431.js"></script><script type="text/javascript" src="polyfills.e57d7f99374aede912a0.js"></script><script type="text/javascript" src="main.d8ba7ca889a00f569feb.js"></script></body></html>
+</html>
