--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="Description" content="Web standards based music player">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="icon" type="image/png" sizes="1024x1024" href="/global/images/logo.png">
-  <link rel="apple-touch-icon" href="/global/images/logo.png">
+  <link rel="apple-touch-icon" href="/global/images/logo-180.png">
   <link rel="prefetch" href="/global/css/light.css" as="style">
   <link rel="prefetch" href="/global/css/dark.css" as="style">
 <link rel="stylesheet" href="styles.8e784f89912390f39aa5.css" integrity="sha384-NODSh8XYRICQ6jKY6v7MeVgKjH38TJWopgPqRcB5x4pQtVm+obHxwY3JG1K57Bio" crossorigin="anonymous"></head>
@@ -49,6 +49,6 @@
       document.querySelector("img").src = "global/images/icon-512-white.png";
     }
   </script>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js" integrity="sha384-v4rB9z5qXuO6U644SALSrNM0l0wvQcniOlRg9Lk3fA3ljnzuAPpETTdOPFjvxVhc" crossorigin="anonymous"></script><script type="text/javascript" src="polyfills.f4fa63e2664e9d4ad28d.js" integrity="sha384-jp/c1Giu5fj/IFdWM4ZbwvVgyjtMS9gJjKk7FrEAEhF+pFKPUMUVfDUjKKVJr8nT" crossorigin="anonymous"></script><script type="text/javascript" src="main.e8c23673d929e9542350.js" integrity="sha384-4Ey53blWufBo+Qg9BY0LcFAbg+g02Cv/zEVgTGVOHLeurFaeaMkD7qK1gOstY788" crossorigin="anonymous"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js" integrity="sha384-v4rB9z5qXuO6U644SALSrNM0l0wvQcniOlRg9Lk3fA3ljnzuAPpETTdOPFjvxVhc" crossorigin="anonymous"></script><script type="text/javascript" src="polyfills.f4fa63e2664e9d4ad28d.js" integrity="sha384-jp/c1Giu5fj/IFdWM4ZbwvVgyjtMS9gJjKk7FrEAEhF+pFKPUMUVfDUjKKVJr8nT" crossorigin="anonymous"></script><script type="text/javascript" src="main.344d49173f3da2613b59.js" integrity="sha384-8AgM4kTY6lOm/EtmXg27acJBtWhPL4Xtoab6MsH7Gxu3ZUGOAZYdNY675rOK+6SF" crossorigin="anonymous"></script></body>
 
 </html>
