... and update base URL

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>JSMusicDB Next</title>
-    <base href="." />
+    <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0078D7" />
     <meta name="Description" content="Web standards based music player" />
