--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
     <link rel="apple-touch-icon" href="/global/images/logo-180.png" />
     <link rel="prefetch" href="/global/css/light.css" as="style" />
     <link rel="prefetch" href="/global/css/dark.css" as="style" />
-    <link
-      rel="stylesheet"
-      href="styles.49c32ba2895be2316db7.css"
-      crossorigin="anonymous"
-    />
-  </head>
+  <link rel="stylesheet" href="styles.eadfe58ec73b420d025d.css"></head>
 
   <body>
     <mdb-root>
@@ -59,23 +54,5 @@
         document.querySelector("img").src = "global/images/icon-512-white.png";
       }
     </script>
-    <script
-      type="text/javascript"
-      src="runtime.b2cd9a60f0c7b320f083.js"
-      integrity="sha384-WCO1dM1VIjdz4wJR0FG7yGtGylSMdwCQDP5MoFjrc/u8970XcFh6zwXdjG76eCDS"
-      crossorigin="anonymous"
-    ></script
-    ><script
-      type="text/javascript"
-      src="polyfills.1fe81d7a27190d6e11b1.js"
-      integrity="sha384-D5NVrpiNgpj4RiTKFUk/gI3/AXNBOxbENCEvUN9hp2a1mayLxUkjAc3RSXkhbXUL"
-      crossorigin="anonymous"
-    ></script
-    ><script
-      type="text/javascript"
-      src="main.bfc6453a98869724ca3d.js"
-      integrity="sha384-MQmu9NnCW2ZqaUxZpwqRRSZwp/kv7/7Tqro6A8+M6yUeG9yy8I+XEuWDCkh9vdME"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <script type="text/javascript" src="runtime.b2cdafc9eb8bc46e47e2.js"></script><script type="text/javascript" src="es2015-polyfills.718be9d82a879676091c.js" nomodule></script><script type="text/javascript" src="polyfills.b2433e4abc6742b2e2eb.js"></script><script type="text/javascript" src="main.36789238e58238e5e50c.js"></script></body>
 </html>
