--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon" href="/global/images/logo-180.png" />
     <link rel="prefetch" href="/global/css/light.css" as="style" />
     <link rel="prefetch" href="/global/css/dark.css" as="style" />
-  <link rel="stylesheet" href="styles.815530a1d57eb0f91638.css"></head>
+  <link rel="stylesheet" href="styles.682a8b26c51723d9ca52.css"></head>
 
   <body>
     <mdb-root>
@@ -54,5 +54,5 @@
         document.querySelector("img").src = "global/images/icon-512-white.png";
       }
     </script>
-  <script type="text/javascript" src="runtime.275a704469a34ad1ed50.js"></script><script type="text/javascript" src="es2015-polyfills.a8e3e8e4978eebc7dfa1.js" nomodule></script><script type="text/javascript" src="polyfills.3d1463e0f21d3538044c.js"></script><script type="text/javascript" src="main.810333a4677d72e862a7.js"></script></body>
+  <script type="text/javascript" src="runtime.c544a547b9ab36fe6437.js"></script><script type="text/javascript" src="polyfills.b7315c77eab223e602a7.js"></script><script type="text/javascript" src="vendor.4a570c13a36653142f05.js"></script><script type="text/javascript" src="main.fe862c53d20214d8c1d6.js"></script></body>
 </html>
