--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon" href="/global/images/logo-180.png" />
     <link rel="prefetch" href="/global/css/light.css" as="style" />
     <link rel="prefetch" href="/global/css/dark.css" as="style" />
-  <link rel="stylesheet" href="styles.b7e453654e4e50a4c678.css"></head>
+  <link rel="stylesheet" href="styles.0074bf5c3a3696946587.css"></head>
 
   <body>
     <mdb-root>
@@ -54,5 +54,5 @@
         document.querySelector("img").src = "global/images/icon-512-white.png";
       }
     </script>
-  <script type="text/javascript" src="runtime.40c59aa31585701a5146.js"></script><script type="text/javascript" src="polyfills.b7315c77eab223e602a7.js"></script><script type="text/javascript" src="vendor.02aa6a0a881316f892d6.js"></script><script type="text/javascript" src="main.c292f4c6b7bdbdbcaafa.js"></script></body>
+  <script src="runtime-latest.6a97364cc2c29c773992.js" type="module"></script><script src="polyfills-latest.7ff60bb8eae845610ea8.js" type="module"></script><script src="runtime-es5.bb51f813cb46f593e4d9.js" nomodule></script><script src="polyfills-es5.137441e65cf968a6558c.js" nomodule></script><script src="vendor-latest.169d274d99f29e22b965.js" type="module"></script><script src="main-latest.b5f505671db87043c209.js" type="module"></script><script src="vendor-es5.3943d34996d9d3eb4a3c.js" nomodule></script><script src="main-es5.514cac46177ad1aae470.js" nomodule></script></body>
 </html>
