1 build to rule them all

--- a/index.html
+++ b/index.html
@@ -54,5 +54,5 @@
         document.querySelector("img").src = "global/images/icon-512-white.png";
       }
     </script>
-  <script src="runtime-latest.6a97364cc2c29c773992.js" type="module"></script><script src="polyfills-latest.7ff60bb8eae845610ea8.js" type="module"></script><script src="runtime-es5.bb51f813cb46f593e4d9.js" nomodule></script><script src="polyfills-es5.137441e65cf968a6558c.js" nomodule></script><script src="vendor-latest.169d274d99f29e22b965.js" type="module"></script><script src="main-latest.b5f505671db87043c209.js" type="module"></script><script src="vendor-es5.3943d34996d9d3eb4a3c.js" nomodule></script><script src="main-es5.514cac46177ad1aae470.js" nomodule></script></body>
+  <script src="runtime.716d4950ee9ce7ba3ad8.js"></script><script src="polyfills.eba95ce1ea8a86c324ea.js"></script><script src="vendor.3943d34996d9d3eb4a3c.js"></script><script src="main.514cac46177ad1aae470.js"></script></body>
 </html>
