Update with es2015 modules

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="apple-touch-icon" href="/global/images/logo-180.png" />
     <link rel="prefetch" href="/global/css/light.css" as="style" />
     <link rel="prefetch" href="/global/css/dark.css" as="style" />
-  <link rel="stylesheet" href="styles.e6f10311eee7ca286741.css"></head>
+  <link rel="stylesheet" href="styles.818da1b048227fd4350d.css"></head>
 
   <body>
     <mdb-root>
@@ -54,5 +54,5 @@
         document.querySelector("img").src = "global/images/icon-512-white.png";
       }
     </script>
-  <script src="runtime.b21ae092c0dd43b31891.js"></script><script src="polyfills.fd1a59b445a75b88a7fc.js"></script><script src="vendor.3381756167c0e1afde37.js"></script><script src="main.e4f62b36bc73807f52e8.js"></script></body>
+  <script src="runtime-es2015.d7f34156d9e2ffbf1148.js" type="module"></script><script src="polyfills-es2015.24fa7cf4560683403231.js" type="module"></script><script src="runtime-es5.7a4c02fbef9e88781934.js" nomodule></script><script src="polyfills-es5.eb1d52404dea40227313.js" nomodule></script><script src="vendor-es2015.3915e59881fd06a165d4.js" type="module"></script><script src="main-es2015.de49be17fe01a97e5c1a.js" type="module"></script><script src="vendor-es5.024f3537a412c900dfff.js" nomodule></script><script src="main-es5.e23c6f5ed5d550805639.js" nomodule></script></body>
 </html>
