--- a/index.html
+++ b/index.html
@@ -8,14 +8,9 @@
     <meta name="theme-color" content="#0078D7" />
     <meta name="Description" content="Web standards based music player" />
     <link rel="manifest" href="manifest.webmanifest" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="1024x1024"
-      href="/global/images/logo.png"
-    />
+    <link rel="icon" type="image/png" sizes="1024x1024" href="/global/images/logo.png" />
     <link rel="apple-touch-icon" href="/global/images/logo-180.png" />
-    <link rel="prefetch" href="/global/css/light.css" as="style" />
+    <link rel="preload" href="/global/css/light.css" as="style" />
     <link rel="prefetch" href="/global/css/dark.css" as="style" />
   <link rel="stylesheet" href="styles.818da1b048227fd4350d.css"></head>
 
@@ -37,8 +32,7 @@
       </div>
     </mdb-root>
     <noscript>
-      Unfortunately JavaScript is needed for this JavaScript based client
-      webaudio based music database.
+      Unfortunately JavaScript is needed for this JavaScript based client webaudio based music database.
     </noscript>
 
     <script>
@@ -54,5 +48,5 @@
         document.querySelector("img").src = "global/images/icon-512-white.png";
       }
     </script>
-  <script src="runtime-es2015.d7f34156d9e2ffbf1148.js" type="module"></script><script src="polyfills-es2015.24fa7cf4560683403231.js" type="module"></script><script src="runtime-es5.7a4c02fbef9e88781934.js" nomodule></script><script src="polyfills-es5.eb1d52404dea40227313.js" nomodule></script><script src="vendor-es2015.3915e59881fd06a165d4.js" type="module"></script><script src="main-es2015.de49be17fe01a97e5c1a.js" type="module"></script><script src="vendor-es5.024f3537a412c900dfff.js" nomodule></script><script src="main-es5.e23c6f5ed5d550805639.js" nomodule></script></body>
+  <script src="runtime-es2015.047eb0cb7c2cacd0c25f.js" type="module"></script><script src="polyfills-es2015.24fa7cf4560683403231.js" type="module"></script><script src="runtime-es5.ef073d66fa2df35724f7.js" nomodule></script><script src="polyfills-es5.eb1d52404dea40227313.js" nomodule></script><script src="vendor-es2015.3915e59881fd06a165d4.js" type="module"></script><script src="main-es2015.de49be17fe01a97e5c1a.js" type="module"></script><script src="vendor-es5.024f3537a412c900dfff.js" nomodule></script><script src="main-es5.e23c6f5ed5d550805639.js" nomodule></script></body>
 </html>
