Shave off 200kb of vendor bytes

--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
     <link rel="apple-touch-icon" href="/global/images/logo-180.png" />
     <link rel="preload" href="/global/css/light.css" as="style" />
     <link rel="prefetch" href="/global/css/dark.css" as="style" />
-  <link rel="stylesheet" href="styles.818da1b048227fd4350d.css"></head>
+  <link rel="stylesheet" href="styles.06c94317300a1cfac5a4.css"></head>
 
   <body>
     <mdb-root>
       <div class="preloader">
         <div>
-          <img src="global/images/logo.png" width="250" alt="Logo" />
+          <picture>
+            <source srcset="global/images/logo.webp" type="image/webp" />
+            <source srcset="global/images/logo.png" width="250" alt="Logo" type="image/jpeg" />
+            <img src="global/images/logo.png" width="250" alt="Logo" />
+          </picture>
         </div>
         <br />
         <br />
@@ -48,5 +52,5 @@
         document.querySelector("img").src = "global/images/icon-512-white.png";
       }
     </script>
-  <script src="runtime-es2015.047eb0cb7c2cacd0c25f.js" type="module"></script><script src="polyfills-es2015.24fa7cf4560683403231.js" type="module"></script><script src="runtime-es5.ef073d66fa2df35724f7.js" nomodule></script><script src="polyfills-es5.eb1d52404dea40227313.js" nomodule></script><script src="vendor-es2015.3915e59881fd06a165d4.js" type="module"></script><script src="main-es2015.de49be17fe01a97e5c1a.js" type="module"></script><script src="vendor-es5.024f3537a412c900dfff.js" nomodule></script><script src="main-es5.e23c6f5ed5d550805639.js" nomodule></script></body>
+  <script src="runtime-es2015.79ebff0ef548493acc32.js" type="module"></script><script src="polyfills-es2015.cf88b47422418c55b9c9.js" type="module"></script><script src="runtime-es5.bc55b76b45600f39a4b6.js" nomodule></script><script src="polyfills-es5.d083a234466f3b4dbbaf.js" nomodule></script><script src="vendor-es2015.ca1a05d77bf11fd8a2eb.js" type="module"></script><script src="main-es2015.83270bb4d8df59265473.js" type="module"></script><script src="vendor-es5.edf0568a304e0b7068ce.js" nomodule></script><script src="main-es5.641db3053a0b6e78dae5.js" nomodule></script></body>
 </html>
