--- a/index.html
+++ b/index.html
@@ -52,5 +52,5 @@
         document.querySelector("img").src = "global/images/icon-512-white.png";
       }
     </script>
-  <script src="runtime-es2015.05f341c98b6f7fbb8b6a.js" type="module"></script><script src="polyfills-es2015.736fd196a0e62ded43fc.js" type="module"></script><script src="runtime-es5.393698a4f3f6a6b64022.js" nomodule></script><script src="polyfills-es5.872a8eb962d42349cf67.js" nomodule></script><script src="vendor-es2015.955cffc138a0b4a4c4af.js" type="module"></script><script src="main-es2015.bf085f370d1f9220c4ba.js" type="module"></script><script src="vendor-es5.f66f6dda3f34ad133e08.js" nomodule></script><script src="main-es5.e096d7e8322eda76f876.js" nomodule></script></body>
+  <script src="runtime-latest.e2bfffbc9d2df092b7d0.js" type="module"></script><script src="polyfills-latest.736fd196a0e62ded43fc.js" type="module"></script><script src="runtime-es5.5d6afda2054fb22ad470.js" nomodule></script><script src="polyfills-es5.872a8eb962d42349cf67.js" nomodule></script><script src="vendor-latest.9bff526c870ab71c046a.js" type="module"></script><script src="main-latest.bf085f370d1f9220c4ba.js" type="module"></script><script src="vendor-es5.8a6b3980c1e9fde656cb.js" nomodule></script><script src="main-es5.e096d7e8322eda76f876.js" nomodule></script></body>
 </html>
