--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="/global/images/logo-180.png" />
     <link rel="preload" href="/global/css/light.css" as="style" />
     <link rel="prefetch" href="/global/css/dark.css" as="style" />
-  <link rel="stylesheet" href="styles.bc1416f75f61b5807be9.css"></head>
+  <link rel="stylesheet" href="styles.90c59e9bddba6b94e770.css"></head>
 
   <body>
     <mdb-root>
@@ -52,5 +52,5 @@
         document.querySelector("img").src = "global/images/icon-512-white.png";
       }
     </script>
-  <script src="runtime-latest.a7c18a8cc6f4ce0ca53c.js" type="module"></script><script src="polyfills-latest.cd330a4fc5b3fcc425b5.js" type="module"></script><script src="runtime-es5.49f022136173f063316f.js" nomodule></script><script src="polyfills-es5.6646b51f3565ac2191f5.js" nomodule></script><script src="vendor-latest.7be4960a9bbd63e46398.js" type="module"></script><script src="main-latest.acf0b87f8b498795dbaa.js" type="module"></script><script src="vendor-es5.b3052e9926d02c6c048c.js" nomodule></script><script src="main-es5.8a6581005610a8c01d8b.js" nomodule></script></body>
+  <script src="runtime-latest.09a08ff039f885057c69.js" defer></script><script src="polyfills-es5-latest.ff19c8a4c4091d16b506.js" nomodule defer></script><script src="polyfills-latest.665b880e302ef85d728e.js" defer></script><script src="vendor-latest.d7f25e35e8010c41e04b.js" defer></script><script src="main-latest.c3c6dd91b12c0c6ef186.js" defer></script></body>
 </html>
