--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="/global/images/logo-180.png" />
     <link rel="preload" href="/global/css/light.css" as="style" />
     <link rel="prefetch" href="/global/css/dark.css" as="style" />
-  <link rel="stylesheet" href="styles.90c59e9bddba6b94e770.css"></head>
+  <link rel="stylesheet" href="styles.6554e086230119c4f5cd.css"></head>
 
   <body>
     <mdb-root>
@@ -52,5 +52,5 @@
         document.querySelector("img").src = "global/images/icon-512-white.png";
       }
     </script>
-  <script src="runtime-latest.09a08ff039f885057c69.js" defer></script><script src="polyfills-es5-latest.ff19c8a4c4091d16b506.js" nomodule defer></script><script src="polyfills-latest.665b880e302ef85d728e.js" defer></script><script src="vendor-latest.d7f25e35e8010c41e04b.js" defer></script><script src="main-latest.c3c6dd91b12c0c6ef186.js" defer></script></body>
+  <script src="runtime-latest.68122c65808d327231a1.js" type="module"></script><script src="polyfills-latest.bef959e0f93707357c30.js" type="module"></script><script src="runtime-es5.410c86a1e64a4ace647f.js" nomodule></script><script src="polyfills-es5.44a5584b905fa3c93410.js" nomodule></script><script src="vendor-latest.8e64f7a3e0b52af8a461.js" type="module"></script><script src="main-latest.222df79ec3e5ba9fff49.js" type="module"></script><script src="vendor-es5.726555aed987486fdfd9.js" nomodule></script><script src="main-es5.41476a4dc5d42e1b22b7.js" nomodule></script></body>
 </html>
