Update to 2015 build

--- a/index.html
+++ b/index.html
@@ -52,5 +52,5 @@
         document.querySelector("img").src = "global/images/icon-512-white.png";
       }
     </script>
-  <script src="runtime-latest.13ef8dafb4321d409bdb.js" type="module"></script><script src="polyfills-latest.240c6b3f84ab26f79092.js" type="module"></script><script src="runtime-es5.c637860744f01e4d8aa0.js" nomodule></script><script src="polyfills-es5.cb290bfb63070a9985eb.js" nomodule></script><script src="vendor-latest.0f07d318f6131b22a83d.js" type="module"></script><script src="main-latest.13231e45f2f320b463fc.js" type="module"></script><script src="vendor-es5.5a857bc26d55f73ef62f.js" nomodule></script><script src="main-es5.8d37236c281a07019013.js" nomodule></script></body>
+  <script src="runtime-es2015.42e59c95a2f9ada04d71.js" type="module"></script><script src="runtime-es5.42e59c95a2f9ada04d71.js" nomodule defer></script><script src="polyfills-es5.c430bfae098bf36bd3be.js" nomodule defer></script><script src="polyfills-es2015.32f309218cd93fe9e129.js" type="module"></script><script src="vendor-es2015.571c7757548f90a59791.js" type="module"></script><script src="vendor-es5.571c7757548f90a59791.js" nomodule defer></script><script src="main-es2015.4a13929faf97c65b2e2b.js" type="module"></script><script src="main-es5.4a13929faf97c65b2e2b.js" nomodule defer></script></body>
 </html>
