--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
   <head>
     <meta charset="utf-8" />
     <title>JSMusicDB Next</title>
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="/global/images/logo-180.png" />
     <link rel="preload" href="/global/css/light.css" as="style" />
     <link rel="prefetch" href="/global/css/dark.css" as="style" />
-  <link rel="stylesheet" href="styles.b79ec9b343e8d57352c6.css"></head>
+  <link rel="stylesheet" href="styles.e917ee2a75cfaca069f2.css"></head>
 
   <body>
     <mdb-root>
@@ -52,5 +52,5 @@
         document.querySelector("img").src = "global/images/icon-512-white.png";
       }
     </script>
-  <script src="runtime-es2015.42e59c95a2f9ada04d71.js" type="module"></script><script src="runtime-es5.42e59c95a2f9ada04d71.js" nomodule defer></script><script src="polyfills-es5.c430bfae098bf36bd3be.js" nomodule defer></script><script src="polyfills-es2015.32f309218cd93fe9e129.js" type="module"></script><script src="vendor-es2015.571c7757548f90a59791.js" type="module"></script><script src="vendor-es5.571c7757548f90a59791.js" nomodule defer></script><script src="main-es2015.4a13929faf97c65b2e2b.js" type="module"></script><script src="main-es5.4a13929faf97c65b2e2b.js" nomodule defer></script></body>
+  <script src="runtime-es2015.e048b76d26233a89513a.js" type="module"></script><script src="runtime-es5.e048b76d26233a89513a.js" nomodule defer></script><script src="polyfills-es5.82c0793b0aac4a997772.js" nomodule defer></script><script src="polyfills-es2015.1329f73154b6648c5848.js" type="module"></script><script src="vendor-es2015.d650aeab6aea417c491c.js" type="module"></script><script src="vendor-es5.d650aeab6aea417c491c.js" nomodule defer></script><script src="main-es2015.a1c80fc6afc270c7d933.js" type="module"></script><script src="main-es5.a1c80fc6afc270c7d933.js" nomodule defer></script></body>
 </html>
